--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <EditTextPreference
+    <ListPreference
+        android:defaultValue="1000"
+        android:entries="@array/updateInterval"
+        android:entryValues="@array/updateIntervalValues"
         android:key="webinterval"
         android:summary="@string/summaryWebInterval"
-        android:title="@string/webInterval" android:selectable="true" android:enabled="true">
-    </EditTextPreference>
+        android:title="@string/webInterval" />
 
 </PreferenceScreen>
