--- a/res/values/intervals.xml
+++ b/res/values/intervals.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string-array name="updateInterval">
+        <item name="0">Cancel Readings</item>
         <item name="1000">Every 1 second</item>
         <item name="5000">Every 5 seconds</item>
         <item name="30000">Every 30 seconds</item>
@@ -9,6 +10,7 @@
         <item name="300000">Every 5 minutes</item>
     </string-array>
     <string-array name="updateIntervalValues">
+        <item name="0">0</item>
         <item name="1000">1000</item>
         <item name="5000">5000</item>
         <item name="30000">30000</item>
